Modulo 7 aggiunta descrizione testuale modali di riepilogo valutazione

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -45,7 +45,7 @@ IdFieldEnum.DELEGATO_LEGALE_RAPPRESENTANTE__CV=Modifica CV Delegato Legale Rappr
 IdFieldEnum.DELEGATO_LEGALE_RAPPRESENTANTE__DELEGA=Modifica Delega Delegato Legale Rappresentante
 IdFieldEnum.DELEGATO_LEGALE_RAPPRESENTANTE__EMAIL=Modifica Email Delegato Legale Rappresentante
 IdFieldEnum.DELEGATO_LEGALE_RAPPRESENTANTE__FULL=Sostituzione Delegato Legale Rappresentante
-IdFieldEnum.DELEGATO_LEGALE_RAPPRESENTANTE__NOME=Modifica Delegato Nome Legale Rappresentante
+IdFieldEnum.DELEGATO_LEGALE_RAPPRESENTANTE__NOME=Modifica Nome Delegato Legale Rappresentante
 IdFieldEnum.DELEGATO_LEGALE_RAPPRESENTANTE__TELEFONO=Modifica Telefono Delegato Legale Rappresentante
 IdFieldEnum.EVENTO_PIANO_FORMATIVO__DISCIPLINE=Modifica Discipline Evento
 IdFieldEnum.EVENTO_PIANO_FORMATIVO__FULL=Sostituzione Evento
@@ -122,6 +122,127 @@ IdFieldEnum.VALUTAZIONE_SUL_CAMPO__RECLUTAMENTO_DIRETTO=Reclutamento diretto
 IdFieldEnum.VALUTAZIONE_SUL_CAMPO__RELAZIONE_ANNUALE=Relazione annuale
 IdFieldEnum.VALUTAZIONE_SUL_CAMPO__SCHEDA_QUALITA_PERCEPITA=Scheda Qualità Percepita
 IdFieldEnum.VALUTAZIONE_SUL_CAMPO__VERIFICA_APPRENDIMENTO=Verifica apprendimento
+IdFieldEnum_valutazione.ACCREDITAMENTO_ALLEGATI__ATTO_COSTITUIVO=Atto Costitutivo e statuto
+IdFieldEnum_valutazione.ACCREDITAMENTO_ALLEGATI__DICHIARAZIONE_ESCLUSIONE=Dichiarazione esclusione conflitto di interessi per l’oggetto sociale
+IdFieldEnum_valutazione.ACCREDITAMENTO_ALLEGATI__DICHIARAZIONE_LEGALE=Dichiarazione del Legale Rappresentante
+IdFieldEnum_valutazione.ACCREDITAMENTO_ALLEGATI__ESPERIENZA_FORMAZIONE=Esperienza formazione in ambito sanitario
+IdFieldEnum_valutazione.ACCREDITAMENTO_ALLEGATI__PIANO_QUALITA=Piano di Qualità
+IdFieldEnum_valutazione.ACCREDITAMENTO_ALLEGATI__RELAZIONE_ATTIVITA_FORMATIVA=Relazione sull'attività formativa
+IdFieldEnum_valutazione.ACCREDITAMENTO_ALLEGATI__RICHIESTA_ACCREDITAMENTO_STANDARD=Richista di accreditamento standard
+IdFieldEnum_valutazione.ACCREDITAMENTO_ALLEGATI__SISTEMA_INFORMATICO=Sistema informatico dedicato alla formazione in ambito sanitario
+IdFieldEnum_valutazione.ACCREDITAMENTO_ALLEGATI__UTILIZZO=Utilizzo di sedi, strutture ed attrezzature di altro soggetto
+IdFieldEnum_valutazione.COMPONENTE_COMITATO_SCIENTIFICO__ATTO_NOMINA=Atto Nomina
+IdFieldEnum_valutazione.COMPONENTE_COMITATO_SCIENTIFICO__CODICEFISCALE=Codice Fiscale
+IdFieldEnum_valutazione.COMPONENTE_COMITATO_SCIENTIFICO__COGNOME=Cognome
+IdFieldEnum_valutazione.COMPONENTE_COMITATO_SCIENTIFICO__CV=CV
+IdFieldEnum_valutazione.COMPONENTE_COMITATO_SCIENTIFICO__EMAIL=Email
+IdFieldEnum_valutazione.COMPONENTE_COMITATO_SCIENTIFICO__FULL=Comitato Scientifico
+IdFieldEnum_valutazione.COMPONENTE_COMITATO_SCIENTIFICO__NOME=Nome
+IdFieldEnum_valutazione.COMPONENTE_COMITATO_SCIENTIFICO__PROFESSIONE=Professione
+IdFieldEnum_valutazione.COMPONENTE_COMITATO_SCIENTIFICO__TELEFONO=Telefono
+IdFieldEnum_valutazione.DATI_ACCREDITAMENTO__DISCIPLINE=Discipline
+IdFieldEnum_valutazione.DATI_ACCREDITAMENTO__ESTRATTO_BILANCIO_COMPLESSIVO=Estratto del bilancio complessivo degli ultimi 3 anni
+IdFieldEnum_valutazione.DATI_ACCREDITAMENTO__ESTRATTO_BILANCIO_FORMAZIONE=Estratto del bilancio relativo alla formazione in ambito sanitario degli ultimi tre anni e budget previsionale
+IdFieldEnum_valutazione.DATI_ACCREDITAMENTO__FATTURATO_COMPLESSIVO=Fatturato o Costi complessivi degli ultimi 3 anni
+IdFieldEnum_valutazione.DATI_ACCREDITAMENTO__FATTURATO_COMPLESSIVO_DUE=Fatturato Complessivo Secondo Anno
+IdFieldEnum_valutazione.DATI_ACCREDITAMENTO__FATTURATO_COMPLESSIVO_TRE=Fatturato Complessivo Terzo Anno
+IdFieldEnum_valutazione.DATI_ACCREDITAMENTO__FATTURATO_COMPLESSIVO_UNO=Fatturato Complessivo Primo Anno
+IdFieldEnum_valutazione.DATI_ACCREDITAMENTO__FATTURATO_FORMAZIONE=Fatturato o Costi dedicati alla formazione del personale sanitario degli ultimi 3 anni
+IdFieldEnum_valutazione.DATI_ACCREDITAMENTO__FATTURATO_FORMAZIONE_DUE=Fatturato o Costi dedicati alla formazione del personale sanitario degli ultimi 3 anni
+IdFieldEnum_valutazione.DATI_ACCREDITAMENTO__FATTURATO_FORMAZIONE_TRE=Fatturato o Costi dedicati alla formazione del personale sanitario degli ultimi 3 anni
+IdFieldEnum_valutazione.DATI_ACCREDITAMENTO__FATTURATO_FORMAZIONE_UNO=Fatturato o Costi dedicati alla formazione del personale sanitario degli ultimi 3 anni
+IdFieldEnum_valutazione.DATI_ACCREDITAMENTO__FUNZIONIGRAMMA=Funzionigramma
+IdFieldEnum_valutazione.DATI_ACCREDITAMENTO__NUMERO_DIPENDENTI=Numero dipendenti dedicati alla formazione
+IdFieldEnum_valutazione.DATI_ACCREDITAMENTO__NUMERO_DIPENDENTI_FORMAZIONE_ALTRO=Numero dipendenti dedicati alla formazione (Altro personale)
+IdFieldEnum_valutazione.DATI_ACCREDITAMENTO__NUMERO_DIPENDENTI_FORMAZIONE_TEMPO_INDETERMINATO=Numero dipendenti dedicati alla formazione (Tempo Indeterminato)
+IdFieldEnum_valutazione.DATI_ACCREDITAMENTO__ORGANIGRAMMA=Organigramma
+IdFieldEnum_valutazione.DATI_ACCREDITAMENTO__PROCEDURE_FORMATIVE=Procedure Formative
+IdFieldEnum_valutazione.DATI_ACCREDITAMENTO__PROFESSIONI_ACCREDITAMENTO=Professioni
+IdFieldEnum_valutazione.DATI_ACCREDITAMENTO__TIPOLOGIA_ACCREDITAMENTO=Tiplogia
+IdFieldEnum_valutazione.DELEGATO_LEGALE_RAPPRESENTANTE__CELLULARE=Cellulare
+IdFieldEnum_valutazione.DELEGATO_LEGALE_RAPPRESENTANTE__CODICEFISCALE=Codice fiscale
+IdFieldEnum_valutazione.DELEGATO_LEGALE_RAPPRESENTANTE__COGNOME=Cognome
+IdFieldEnum_valutazione.DELEGATO_LEGALE_RAPPRESENTANTE__CV=CV
+IdFieldEnum_valutazione.DELEGATO_LEGALE_RAPPRESENTANTE__DELEGA=Delega
+IdFieldEnum_valutazione.DELEGATO_LEGALE_RAPPRESENTANTE__EMAIL=Email
+IdFieldEnum_valutazione.DELEGATO_LEGALE_RAPPRESENTANTE__FULL=Sostituzione
+IdFieldEnum_valutazione.DELEGATO_LEGALE_RAPPRESENTANTE__NOME=Nome
+IdFieldEnum_valutazione.DELEGATO_LEGALE_RAPPRESENTANTE__TELEFONO=Telefono
+IdFieldEnum_valutazione.EVENTO_PIANO_FORMATIVO__DISCIPLINE=Discipline
+IdFieldEnum_valutazione.EVENTO_PIANO_FORMATIVO__FULL=Sostituzione
+IdFieldEnum_valutazione.EVENTO_PIANO_FORMATIVO__OBIETTIVO_NAZIONALE=Obiettivo Nazionale
+IdFieldEnum_valutazione.EVENTO_PIANO_FORMATIVO__OBIETTIVO_REGIONALE=Obiettivo Regionale
+IdFieldEnum_valutazione.EVENTO_PIANO_FORMATIVO__PROCEDURA_FORMATIVA=Procedura Formativa
+IdFieldEnum_valutazione.EVENTO_PIANO_FORMATIVO__PROFESSIONI_EVENTO=Professioni
+IdFieldEnum_valutazione.EVENTO_PIANO_FORMATIVO__TITOLO=Titolo
+IdFieldEnum_valutazione.LEGALE_RAPPRESENTANTE__ATTO_NOMINA=Atto Nomina
+IdFieldEnum_valutazione.LEGALE_RAPPRESENTANTE__CELLULARE=Cellulare
+IdFieldEnum_valutazione.LEGALE_RAPPRESENTANTE__CODICEFISCALE=Codice fiscale
+IdFieldEnum_valutazione.LEGALE_RAPPRESENTANTE__COGNOME=Cognome
+IdFieldEnum_valutazione.LEGALE_RAPPRESENTANTE__CV=CV
+IdFieldEnum_valutazione.LEGALE_RAPPRESENTANTE__EMAIL=Email
+IdFieldEnum_valutazione.LEGALE_RAPPRESENTANTE__FULL=Sostituzione
+IdFieldEnum_valutazione.LEGALE_RAPPRESENTANTE__NOME=Nome
+IdFieldEnum_valutazione.LEGALE_RAPPRESENTANTE__PEC=Pec
+IdFieldEnum_valutazione.LEGALE_RAPPRESENTANTE__TELEFONO=Telefono
+IdFieldEnum_valutazione.PROVIDER__CODICE_FISCALE=Codice Fiscale
+IdFieldEnum_valutazione.PROVIDER__DENOMINAZIONE_LEGALE=Denominazione
+IdFieldEnum_valutazione.PROVIDER__EMAIL_STRUTTURA=Email
+IdFieldEnum_valutazione.PROVIDER__NATURA_ORGANIZZAZIONE=Natura Organizzazione
+IdFieldEnum_valutazione.PROVIDER__NO_PROFIT=Profit / No Profit
+IdFieldEnum_valutazione.PROVIDER__PARTITA_IVA=Partita Iva
+IdFieldEnum_valutazione.PROVIDER__RAGIONE_SOCIALE=Ragione sociale
+IdFieldEnum_valutazione.PROVIDER__TIPO_ORGANIZZATORE=Tipo Organizzazione
+IdFieldEnum_valutazione.RESPONSABILE_AMMINISTRATIVO__ATTO_NOMINA=Atto Nomina
+IdFieldEnum_valutazione.RESPONSABILE_AMMINISTRATIVO__CODICEFISCALE=Codice Fiscale
+IdFieldEnum_valutazione.RESPONSABILE_AMMINISTRATIVO__COGNOME=Cognome
+IdFieldEnum_valutazione.RESPONSABILE_AMMINISTRATIVO__CV=CV
+IdFieldEnum_valutazione.RESPONSABILE_AMMINISTRATIVO__EMAIL=Email
+IdFieldEnum_valutazione.RESPONSABILE_AMMINISTRATIVO__FULL=Sostituzione
+IdFieldEnum_valutazione.RESPONSABILE_AMMINISTRATIVO__NOME=Nome
+IdFieldEnum_valutazione.RESPONSABILE_AMMINISTRATIVO__TELEFONO=Telefono
+IdFieldEnum_valutazione.RESPONSABILE_QUALITA__ATTO_NOMINA=Atto Nomina
+IdFieldEnum_valutazione.RESPONSABILE_QUALITA__CODICEFISCALE=Codice Fiscale
+IdFieldEnum_valutazione.RESPONSABILE_QUALITA__COGNOME=Cognome
+IdFieldEnum_valutazione.RESPONSABILE_QUALITA__CV=CV
+IdFieldEnum_valutazione.RESPONSABILE_QUALITA__EMAIL=Email
+IdFieldEnum_valutazione.RESPONSABILE_QUALITA__FULL=Sostituzione
+IdFieldEnum_valutazione.RESPONSABILE_QUALITA__NOME=Nome
+IdFieldEnum_valutazione.RESPONSABILE_QUALITA__TELEFONO=Telefono
+IdFieldEnum_valutazione.RESPONSABILE_SEGRETERIA__ATTO_NOMINA=Atto Nomina
+IdFieldEnum_valutazione.RESPONSABILE_SEGRETERIA__CODICEFISCALE=Codice Fiscale
+IdFieldEnum_valutazione.RESPONSABILE_SEGRETERIA__COGNOME=Cognome
+IdFieldEnum_valutazione.RESPONSABILE_SEGRETERIA__CV=CV
+IdFieldEnum_valutazione.RESPONSABILE_SEGRETERIA__EMAIL=Email
+IdFieldEnum_valutazione.RESPONSABILE_SEGRETERIA__FULL=Sostituzione
+IdFieldEnum_valutazione.RESPONSABILE_SEGRETERIA__NOME=Nome
+IdFieldEnum_valutazione.RESPONSABILE_SEGRETERIA__TELEFONO=Telefono
+IdFieldEnum_valutazione.RESPONSABILE_SISTEMA_INFORMATICO__ATTO_NOMINA=Atto Nomina
+IdFieldEnum_valutazione.RESPONSABILE_SISTEMA_INFORMATICO__CODICEFISCALE=Codice Fiscale
+IdFieldEnum_valutazione.RESPONSABILE_SISTEMA_INFORMATICO__COGNOME=Cognome
+IdFieldEnum_valutazione.RESPONSABILE_SISTEMA_INFORMATICO__CV=CV
+IdFieldEnum_valutazione.RESPONSABILE_SISTEMA_INFORMATICO__EMAIL=Email
+IdFieldEnum_valutazione.RESPONSABILE_SISTEMA_INFORMATICO__FULL=Sostituzione
+IdFieldEnum_valutazione.RESPONSABILE_SISTEMA_INFORMATICO__NOME=Nome
+IdFieldEnum_valutazione.RESPONSABILE_SISTEMA_INFORMATICO__TELEFONO=Telefono
+IdFieldEnum_valutazione.SEDE__CAP=Cap
+IdFieldEnum_valutazione.SEDE__COMUNE=Comune
+IdFieldEnum_valutazione.SEDE__EMAIL=Email
+IdFieldEnum_valutazione.SEDE__FAX=Fax
+IdFieldEnum_valutazione.SEDE__FULL=Sostituzione
+IdFieldEnum_valutazione.SEDE__INDIRIZZO=Indirizzo
+IdFieldEnum_valutazione.SEDE__IS_LEGALE=Tipologia
+IdFieldEnum_valutazione.SEDE__IS_OPERATIVA=Tipologia
+IdFieldEnum_valutazione.SEDE__PROVINCIA=Provincia
+IdFieldEnum_valutazione.SEDE__TELEFONO=Telefono
+IdFieldEnum_valutazione.VALUTAZIONE_SUL_CAMPO__IDONEITA_SEDE=Idoneità della Sede
+IdFieldEnum_valutazione.VALUTAZIONE_SUL_CAMPO__PERCEZIONE_INTERESSE_COMMERICALE_SANITA=Percezione evento interesse commerciale Sanità
+IdFieldEnum_valutazione.VALUTAZIONE_SUL_CAMPO__PIANO_FORMATIVO=Piano Formativo
+IdFieldEnum_valutazione.VALUTAZIONE_SUL_CAMPO__PRESENZA_PARTECIPANTI=Presenza dei partecipanti
+IdFieldEnum_valutazione.VALUTAZIONE_SUL_CAMPO__RECLUTAMENTO_DIRETTO=Reclutamento diretto
+IdFieldEnum_valutazione.VALUTAZIONE_SUL_CAMPO__RELAZIONE_ANNUALE=Relazione annuale
+IdFieldEnum_valutazione.VALUTAZIONE_SUL_CAMPO__SCHEDA_QUALITA_PERCEPITA=Scheda Qualità Percepita
+IdFieldEnum_valutazione.VALUTAZIONE_SUL_CAMPO__VERIFICA_APPRENDIMENTO=Verifica apprendimento
 NotEmpty=campo obbligatorio
 NotNull=campo obbligatorio
 app.title=ECM - Regione Veneto
@@ -494,6 +615,7 @@ label.demoValutazione=Valutazione Domanda
 label.denominazione_legale=Denominazione Legale
 label.denominazione_legale_login=Denominazione Legale della struttura richiedente
 label.denominazione_legale_provider=Denominazione Legale del Provider
+label.descrizione=Descrizione
 label.descrizione_del_progetto=Descrizione del progetto e rilevanza formativa
 label.descrizione_verifica_ricadute_formative=Descrizione verifica ricadute formativa
 label.destinatari=Destinatari
@@ -1312,6 +1434,7 @@ message.valutazione_salvata_gruppo_riassegnato=Valutazione salvata e riassegnata
 message.valutazione_salvata_team_leader_assegnato=Valutazione salvata e assegnata al Team Leader con successo.
 message.verbale_salvato=Verbale aggiornato con successo.
 message.warning=Attenzione
+message.warning_no_privilegi_necessari_risorsa=L'utente risulta non avere i privilegi necessari per accedere alla risorsa.
 message.xml_evento_validation_ok=Report importato con successo.
 month.agosto=Agosto
 month.aprile=Aprile
@@ -1325,4 +1448,3 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
-message.warning_no_privilegi_necessari_risorsa=L'utente risulta non avere i privilegi necessari per accedere alla risorsa.
