--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1448,3 +1448,5 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
+label.vademecum=Vademecum relativo alle regole di presentazione della Domanda
+label.presa_visione_segreteria=(Il Provider non ha integrato i dati/documenti richiesti)
