modulo 38/39 - vaschetta segreteria provider sblocco campi

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -862,7 +862,7 @@ label.listaDomandeNonValutate=Lista delle ultime Domande di Accreditamento di cu
 label.listaDomandePreavvisoRigetto=Lista delle Domande di Accreditamento in preavviso di rigetto
 label.listaDomandePreavvisoRigettoProvvisorio=Lista delle Domande di Accreditamento Provvisorie in preavviso di rigetto
 label.listaDomandePreavvisoRigettoStandard=Lista delle Domande di Accreditamento Standard in preavviso di rigetto
-label.listaDomandeRichiestaIntegrazione=Lista delle Domande di Accreditamento in richiesta di integrazione
+label.listaDomandeIntegrazione=Lista delle Domande di Accreditamento in richiesta di integrazione
 label.listaDomandeRichiestaIntegrazioneProvvisorio=Lista delle Domande di Accreditamento Provvisorie in richiesta di integrazione
 label.listaDomandeRichiestaIntegrazioneStandard=Lista delle Domande di Accreditamento Standard in richiesta di integrazione
 label.lista_allegati=Lista degli allegati del provider {0}
@@ -1450,3 +1450,5 @@ month.ottobre=Ottobre
 month.settembre=Settembre
 label.vademecum=Vademecum relativo alle regole di presentazione della Domanda
 label.presa_visione_segreteria=(Il Provider non ha integrato i dati/documenti richiesti)
+label.di_cui_richiedere_integrazione=Di cui richiedere l'integrazione
+label.listaDomandeRichiestaIntegrazione=Lista delle Domande di Accreditamento di cui richiedere l'integrazione
