Chiuso modulo 38 e 39 + fix richiesti:
-Scaricamento Vademecum in domanda standard (pag 35 delle specifiche)
-I tasti x valutazione devono essere attivi anche su campi di cui è
stata chiesta la modifica ma che non sono stati modificati (POTREBBE
ESSERE PROBLEMA): visualizzarli eventualmente con colore diverso in modo
tale da capire che era stata chiesta integrazione ma non è stata fatta
-Mettiamo in documenti una dicitura che è stata presa visione in quella
data (quando fai "presa visione" nel flusso). La dicitura esatta è: "Il
Provider non ha integrato i dati/documenti richiesti+ DATA". (T))
-Il sistema calcola in automatico le tempistiche relative alla
possibilità per il Provider di presentazione di una nuova istanza di
accreditamento provvisorio da parte del Provider, che potrà essere
presentata non prima di 6 mesi dalla data di conclusione del
procedimento, e che seguirà l’iter del procedimento di accreditamento
provvisorio. (pag 43 specifiche)
-Togliere obbligatorietà di tutti i file caricati nel verbale di
verifica
-Genera file metterlo in domanda staccandolo da conferma valutazione
-Rendere modificabili anche i dati del legale/delegato
-Sistemare etichetta verbale in documenti
-Vaschetta per domande in stato abilita campi
-Rendere modificabile per la Segreteria la riedizione in tutti i campi,
compresi quelli che devono rimanere esattamente uguali all'edizione
padre. Questa modifica è temporanea, fino a quando non sarà effettuato
il meccanismo di sincronizzazione padre-figlio nelle riedizioni.
-Paginazione pagina eventi per Segreteria. Li carica tutti e la pagina
sta diventando molto pesante. Facciamo che gli eventi siano suddivisi in
varie pagine.
-Modifica obiettivo 17. Spostare in:

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -375,6 +375,7 @@ label.FSC=formazione sul campo (FSC)
 label.Ok=Ok
 label.RES=formazione residenziale (RES)
 label.a=A
+label.a_partire_da=a partire dal:
 label.abilita=Abilita
 label.abilita_campi=Abilita campi
 label.abilita_id_editabili=Abilita campi editabili
@@ -578,6 +579,7 @@ label.data_invio=Data invio
 label.data_ora_scadenza_valutazione=Data e Ora scadenza Valutazione
 label.data_pagamento=Data Pagamento
 label.data_protocollo=Data Protocollo
+label.data_rinnovo_inserimento_domanda_accreditamento_provvisorio=Inserimento nuova domanda accreditamento provvisorio
 label.data_scadenza_pagamento=Data scadenza pagamento
 label.data_scadenza_rendiconto=Data Scadenza Rendiconto
 label.data_ultima_modifica=Data Ultima Modifica
@@ -623,6 +625,7 @@ label.destinatari_evento=Destinatari dell'evento
 label.dettaglio_attivita=Dettaglio Attività
 label.devono_pagare_quota_annuale=Devono pagare la quota annuale
 label.devono_pagare_quota_eventi=Devono pagare la quota degli eventi
+label.di_cui_richiedere_integrazione=Di cui richiedere l'integrazione
 label.dichiarazioneEsclusione=Dichiarazione esclusione conflitto di interessi per l’oggetto sociale
 label.dichiarazioneLegale=Dichiarazione del Legale Rappresentante
 label.dichiarazione_assenza_conflitto_interesse=Dichiarazione di assenza di conflitto di interesse
@@ -724,7 +727,7 @@ label.flag_crediti_confermati=Crediti confermati
 label.flusso_accreditamento=Flusso Accreditamento
 label.flusso_accreditamento_provvisorio=Flusso Accreditamento Provvisorio
 label.flusso_accreditamento_standard=Flusso Accreditamento Standard
-label.forme_finanziamento_radio=Sono presenti forme di finanziamento?
+label.forme_finanziamento_radio=Sono presenti altre forme di finanziamento?
 label.from=Da:
 label.from_provider=Da: {0} ({1})
 label.from_provider_list={0} ({1})
@@ -858,11 +861,12 @@ label.listaDomandeDaValutareIntegrazione=Lista Domande di Accreditamento di cui 
 label.listaDomandeDaValutareProvvisorio=Lista delle Domande di Accreditamento Provvisorie da valutare
 label.listaDomandeDaValutareStandard=Lista delle Domande di Accreditamento Standard da valutare
 label.listaDomandeInScadenza=Lista delle Domande di Accreditamento in scadenza (nei prossimi 10 giorni)
+label.listaDomandeIntegrazione=Lista delle Domande di Accreditamento in richiesta di integrazione
 label.listaDomandeNonValutate=Lista delle ultime Domande di Accreditamento di cui non è stata fornita una valutazione
 label.listaDomandePreavvisoRigetto=Lista delle Domande di Accreditamento in preavviso di rigetto
 label.listaDomandePreavvisoRigettoProvvisorio=Lista delle Domande di Accreditamento Provvisorie in preavviso di rigetto
 label.listaDomandePreavvisoRigettoStandard=Lista delle Domande di Accreditamento Standard in preavviso di rigetto
-label.listaDomandeIntegrazione=Lista delle Domande di Accreditamento in richiesta di integrazione
+label.listaDomandeRichiestaIntegrazione=Lista delle Domande di Accreditamento di cui richiedere l'integrazione
 label.listaDomandeRichiestaIntegrazioneProvvisorio=Lista delle Domande di Accreditamento Provvisorie in richiesta di integrazione
 label.listaDomandeRichiestaIntegrazioneStandard=Lista delle Domande di Accreditamento Standard in richiesta di integrazione
 label.lista_allegati=Lista degli allegati del provider {0}
@@ -1072,6 +1076,7 @@ label.preavvisoRigetto=in preavviso di rigetto
 label.prendi_in_carica=Prendi in Carico
 label.presa_in_carico_da=Presa in carico da
 label.presa_visione=Presa visione
+label.presa_visione_segreteria=(Il Provider non ha integrato i dati/documenti richiesti)
 label.presente_alla_visita_verifica=(presente alla visita di verifica)
 label.presente_legale_rappresentante_sottoscrizione_verbale=\u00C8 presente il Legale Rappresentante per la sottoscrizione del verbale?
 label.presenzaPartecipanti=Presenza dei Partecipanti
@@ -1317,6 +1322,7 @@ label.username=Username
 label.utente=Utente
 label.utenti=Utenti
 label.utilizzo=Utilizzo di sedi, strutture ed attrezzature di altro soggetto
+label.vademecum=Vademecum relativo alle regole di presentazione della Domanda
 label.vai_al_modulo_di_registrazione=Vai al modulo di registrazione
 label.vai_all_evento=Vai all'Evento
 label.vai_all_evento=Visualizza Evento
@@ -1448,7 +1454,4 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
-label.vademecum=Vademecum relativo alle regole di presentazione della Domanda
-label.presa_visione_segreteria=(Il Provider non ha integrato i dati/documenti richiesti)
-label.di_cui_richiedere_integrazione=Di cui richiedere l'integrazione
-label.listaDomandeRichiestaIntegrazione=Lista delle Domande di Accreditamento di cui richiedere l'integrazione
+label.non_integrato_dal_provider=Valore non modificato dal Provider in fase di integrazione
