Bugfix - ricerca provider

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -981,6 +981,7 @@ label.non_hanno_inserito_piano_formativo=Non hanno inserito il piano formativo
 label.non_hanno_pagato_quota_annuale=Non hanno pagato la quota annuale
 label.non_hanno_valutato=Non hanno valutato le domande di accreditamento assegnate loro
 label.non_inserito=non inserito
+label.non_integrato_dal_provider=Valore non modificato dal Provider in fase di integrazione
 label.non_pagato=Non pagato
 label.non_specificato=non specificato
 label.non_valido=non valido
@@ -1267,6 +1268,7 @@ label.stato_destinazione=Stato di Destinazione della Domanda di Accreditamento
 label.stato_domanda=Stato Domanda
 label.stato_inserimento=Stato Inserimento
 label.stato_pagamento=Stato pagamento
+label.stato_provider=Stato Provider
 label.stato_spedizione=Stato Spedizione
 label.stato_valutazione=Stato Valutazione
 label.status=Status
@@ -1454,4 +1456,3 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
-label.non_integrato_dal_provider=Valore non modificato dal Provider in fase di integrazione
