commit in locale

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1456,3 +1456,5 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
+label.variazione_dati=Variazione dati e documenti
+label.invia_variazione_dati=Invia variazione dati
