giro corto variazione dati completato (lato applicativo - senza flusso)

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1458,3 +1458,9 @@ month.ottobre=Ottobre
 month.settembre=Settembre
 label.variazione_dati=Variazione dati e documenti
 label.invia_variazione_dati=Invia variazione dati
+label.valuta_variazione_dati=Valuta variazione dati
+label.esito_della_valutazione_variazione_dati=Esito della valutazione della Variazione dei Dati e dei Documenti
+label.conferma_variazione_dati=Conferma
+label.assegna_valutazione_referee=Assegna alla valutazione di un Referee
+label.seleziona_referee_variazione_dati=Seleziona il Referee per la valutazione della Variazione dei Dati e dei Documenti
+message.valutazione_variazione_dati_salvata=Valutazione della Variazione dei Dati e dei Documenti salvata con successo.
