Correzione pdf accreditamento e diniego

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -37,7 +37,7 @@ IdFieldEnum.DATI_ACCREDITAMENTO__NUMERO_DIPENDENTI_FORMAZIONE_TEMPO_INDETERMINAT
 IdFieldEnum.DATI_ACCREDITAMENTO__ORGANIGRAMMA=Modifica Organigramma
 IdFieldEnum.DATI_ACCREDITAMENTO__PROCEDURE_FORMATIVE=Modifica Procedure Formative Accreditamento
 IdFieldEnum.DATI_ACCREDITAMENTO__PROFESSIONI_ACCREDITAMENTO=Modifica Professioni Accreditamento
-IdFieldEnum.DATI_ACCREDITAMENTO__TIPOLOGIA_ACCREDITAMENTO=Modifica Tiplogia Accreditamento
+IdFieldEnum.DATI_ACCREDITAMENTO__TIPOLOGIA_ACCREDITAMENTO=Modifica Tipologia Accreditamento
 IdFieldEnum.DELEGATO_LEGALE_RAPPRESENTANTE__CELLULARE=Modifica Cellulare Delegato  Legale Rappresentante
 IdFieldEnum.DELEGATO_LEGALE_RAPPRESENTANTE__CODICEFISCALE=Modifica Codice fiscale Delegato Legale Rappresentante
 IdFieldEnum.DELEGATO_LEGALE_RAPPRESENTANTE__COGNOME=Modifica Cognome Delegato Legale Rappresentante
@@ -158,7 +158,7 @@ IdFieldEnum_valutazione.DATI_ACCREDITAMENTO__NUMERO_DIPENDENTI_FORMAZIONE_TEMPO_
 IdFieldEnum_valutazione.DATI_ACCREDITAMENTO__ORGANIGRAMMA=Organigramma
 IdFieldEnum_valutazione.DATI_ACCREDITAMENTO__PROCEDURE_FORMATIVE=Procedure Formative
 IdFieldEnum_valutazione.DATI_ACCREDITAMENTO__PROFESSIONI_ACCREDITAMENTO=Professioni
-IdFieldEnum_valutazione.DATI_ACCREDITAMENTO__TIPOLOGIA_ACCREDITAMENTO=Tiplogia
+IdFieldEnum_valutazione.DATI_ACCREDITAMENTO__TIPOLOGIA_ACCREDITAMENTO=Tipologia
 IdFieldEnum_valutazione.DELEGATO_LEGALE_RAPPRESENTANTE__CELLULARE=Cellulare
 IdFieldEnum_valutazione.DELEGATO_LEGALE_RAPPRESENTANTE__CODICEFISCALE=Codice fiscale
 IdFieldEnum_valutazione.DELEGATO_LEGALE_RAPPRESENTANTE__COGNOME=Cognome
