Aggiunta label Concluso

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -521,6 +521,7 @@ label.comunicazioni_con_provider=del Provider
 label.comunicazioni_dashboard=Dashboard delle Comunicazioni
 label.comunicazioni_inviate=Comunicazioni Inviate
 label.comunicazioni_provider=Comunicazioni del Provider
+label.concluso=Concluso
 label.conferma=Conferma
 label.conferma_azione=Conferma Azione
 label.conferma_chiusura_comunicazione=Conferma della chiusura della Comunicazione
