flusso di decadenza + correzione integrazione

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -451,6 +451,7 @@ label.argomento=Argomento
 label.assegna=Assegna
 label.assegna_nuovo_gruppo=Assegna Nuovi Referee
 label.assegna_stesso_gruppo=Fai valutare Integrazione
+label.assegna_valutazione_referee=Assegna alla valutazione di un Referee
 label.attenzione=Attenzione!
 label.attoCostitutivo=Atto Costitutivo e statuto
 label.attoNomina=Atto di nomina
@@ -471,6 +472,7 @@ label.budgetPrevisionale=Budget previsionale per l’anno in corso
 label.cambia_password=Cambia password
 label.cambio_password=Cambio password
 label.campo=Campo
+label.cancellato=Cancellato
 label.caninsert_domanda_accreditamento_standard=Inserimento Domanda Accreditamento Standard
 label.caninsert_eventi=Inserimento Eventi
 label.caninsert_piano_formativo=Inserimento Piano Formativo
@@ -521,17 +523,19 @@ label.comunicazioni_con_provider=del Provider
 label.comunicazioni_dashboard=Dashboard delle Comunicazioni
 label.comunicazioni_inviate=Comunicazioni Inviate
 label.comunicazioni_provider=Comunicazioni del Provider
+label.conclusione_del_procedimento=Conclusione del procedimento
 label.concluso=Concluso
 label.conferma=Conferma
 label.conferma_azione=Conferma Azione
 label.conferma_chiusura_comunicazione=Conferma della chiusura della Comunicazione
-label.conferma_chiusura_comunicazione=Conferma della chiusura della Comunicazione
+label.conferma_conclusione_del_procedimento=Procedere con la chiusura del procedimento di accreditamento?
 label.conferma_crediti_proposti_dal_sistema=Conferma crediti proposti dal sistema
 label.conferma_evento=Conferma Evento
 label.conferma_inserimento_piano=Inserendo il Piano Formativo non sarà più possibile modificare i dati della domanda.
 label.conferma_modifiche_evento=Valida modifiche
 label.conferma_password=Conferma Password
 label.conferma_valutazione=Conferma Valutazione
+label.conferma_variazione_dati=Conferma
 label.contrassegna_come_letta=Contrassegna come letta
 label.contratto=Contratto
 label.contratto_da_inserire=CONTRATTO DA INSERIRE
@@ -674,6 +678,7 @@ label.errore_login=Username e/o password errati
 label.esempio_modello=Modello di esempio
 label.esiste_traduzione=Esiste un sistema di traduzione simultanea?
 label.esito_della_valutazione_sul_campo=Esito della Valutazione sul Campo
+label.esito_della_valutazione_variazione_dati=Esito della valutazione della Variazione dei Dati e dei Documenti
 label.esito_negativo=Esito negativo
 label.esito_positivo=Esito positivo
 label.esito_ricerca=(Esito Ricerca)
@@ -833,6 +838,7 @@ label.invia_email_commissione_seduta=Invia email di notifica alla Commissione EC
 label.invia_email_valutazione_sul_campo=Invia Email Convocazione
 label.invia_integrazione=Invia Integrazione
 label.invia_richiesta_integrazione=Invia Richiesta Integrazione
+label.invia_variazione_dati=Invia variazione dati
 label.inviata=Inviata
 label.inviata_da=Inviata da: {0}
 label.inviate=Inviate
@@ -1008,6 +1014,7 @@ label.numero_valutazioni_non_date=Numero Valutazioni non date (consecutivamente)
 label.nuova=Nuova
 label.nuova_comunicazione=Nuova Comunicazione
 label.nuova_comunicazione=Nuova Comunicazione
+label.nuova_domanda=Nuova domanda
 label.nuova_domanda_provvisoria=Nuova domanda Provvisoria
 label.nuova_domanda_standard=Nuova domanda Standard
 label.nuova_password=Nuova Password
@@ -1240,6 +1247,7 @@ label.seleziona_anno_riferimento=Selezionare l'anno di riferimento
 label.seleziona_button=Seleziona
 label.seleziona_referee=Seleziona {0} Referee per la valutazione dell'Accreditamento
 label.seleziona_referee_necessari=Seleziona {0} Referee a cui assegnare la domanda
+label.seleziona_referee_variazione_dati=Seleziona il Referee per la valutazione della Variazione dei Dati e dei Documenti
 label.selezionare_le_fasi_da_inserire=Selezionare le fasi che si desidera inserire
 label.settimana=settimana
 label.settoriale=Settoriale
@@ -1333,6 +1341,7 @@ label.validazione=Validazione
 label.valido=valido
 label.valuta=Valuta
 label.valuta_domanda=Valuta Domanda
+label.valuta_variazione_dati=Valuta variazione dati
 label.valutare=da valutare
 label.valutato=valutato
 label.valutatore=Valutatore
@@ -1348,6 +1357,7 @@ label.valutazioni_effettuate_sul_campo=Valutazioni di verifica effettuate sul ca
 label.valutazioni_precedenti=Valutazioni precedenti
 label.valutazioni_sul_campo=Valutazioni sul Campo
 label.valutazioni_verifica_sul_campo=Valutazioni verifica sul campo
+label.variazione_dati=Variazione dati e documenti
 label.vedi_lista=Vedi lista
 label.vedi_tutte=Vedi tutte
 label.verbale=Verbale
@@ -1441,6 +1451,7 @@ message.valutazione_complessiva_salvata=La Valutazione dell'Accreditamento è st
 message.valutazione_salvata=Valutazione e note salvate con successo!
 message.valutazione_salvata_gruppo_riassegnato=Valutazione salvata e riassegnata ai Referee CRECM con successo.
 message.valutazione_salvata_team_leader_assegnato=Valutazione salvata e assegnata al Team Leader con successo.
+message.valutazione_variazione_dati_salvata=Valutazione della Variazione dei Dati e dei Documenti salvata con successo.
 message.verbale_salvato=Verbale aggiornato con successo.
 message.warning=Attenzione
 message.warning_no_privilegi_necessari_risorsa=L'utente risulta non avere i privilegi necessari per accedere alla risorsa.
@@ -1457,11 +1468,3 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
-label.variazione_dati=Variazione dati e documenti
-label.invia_variazione_dati=Invia variazione dati
-label.valuta_variazione_dati=Valuta variazione dati
-label.esito_della_valutazione_variazione_dati=Esito della valutazione della Variazione dei Dati e dei Documenti
-label.conferma_variazione_dati=Conferma
-label.assegna_valutazione_referee=Assegna alla valutazione di un Referee
-label.seleziona_referee_variazione_dati=Seleziona il Referee per la valutazione della Variazione dei Dati e dei Documenti
-message.valutazione_variazione_dati_salvata=Valutazione della Variazione dei Dati e dei Documenti salvata con successo.
