Vaschette per decadenza provider

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1468,3 +1468,6 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
+label.non_ha_completato_domanda_accreditamento_in_tempo=Non ha completato la domanda di accreditamento in tempo
+label.non_hanno_completato_domanda_accreditamento_in_tempo=Non hanno completato la domanda di accreditamento in tempo
+label.con_crediti_non_confermati=Con crediti non confermati
