--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1471,3 +1471,9 @@ month.settembre=Settembre
 label.non_ha_completato_domanda_accreditamento_in_tempo=Non ha completato la domanda di accreditamento in tempo
 label.non_hanno_completato_domanda_accreditamento_in_tempo=Non hanno completato la domanda di accreditamento in tempo
 label.con_crediti_non_confermati=Con crediti non confermati
+label.blocca=Blocca
+label.conferma_decadenza_provider=Conferma decadenza del Provider
+label.allegatoDecadenza=Documento di decadenza
+label.motivazione=Motivazione
+message.provider_bloccato_success=Provider bloccato con successo.
+label.allegato_decadenza=Allegato decadenza Provider
