fix integrazione componenti/sedi + nuova tab lookup anagrafica evento

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -10,6 +10,7 @@ IdFieldEnum.ACCREDITAMENTO_ALLEGATI__RELAZIONE_ATTIVITA_FORMATIVA=Modifica Relaz
 IdFieldEnum.ACCREDITAMENTO_ALLEGATI__RICHIESTA_ACCREDITAMENTO_STANDARD=Modifica Richista di accreditamento standard
 IdFieldEnum.ACCREDITAMENTO_ALLEGATI__SISTEMA_INFORMATICO=Modifica Sistema informatico dedicato alla formazione in ambito sanitario
 IdFieldEnum.ACCREDITAMENTO_ALLEGATI__UTILIZZO=Modifica Utilizzo di sedi, strutture ed attrezzature di altro soggetto
+IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__IS_COORDINATORE=Modifica Flag Coordinatore Comitato Scientifico
 IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__ATTO_NOMINA=Modifica Atto Nomina Componente Comitato Scientifico
 IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__CODICEFISCALE=Modifica Codice Fiscale Componente Comitato Scientifico
 IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__COGNOME=Modifica Cognome Componente Comitato Scientifico
@@ -131,6 +132,7 @@ IdFieldEnum_valutazione.ACCREDITAMENTO_ALLEGATI__RELAZIONE_ATTIVITA_FORMATIVA=Re
 IdFieldEnum_valutazione.ACCREDITAMENTO_ALLEGATI__RICHIESTA_ACCREDITAMENTO_STANDARD=Richista di accreditamento standard
 IdFieldEnum_valutazione.ACCREDITAMENTO_ALLEGATI__SISTEMA_INFORMATICO=Sistema informatico dedicato alla formazione in ambito sanitario
 IdFieldEnum_valutazione.ACCREDITAMENTO_ALLEGATI__UTILIZZO=Utilizzo di sedi, strutture ed attrezzature di altro soggetto
+IdFieldEnum_valutazione.COMPONENTE_COMITATO_SCIENTIFICO__IS_COORDINATORE=Flag Coordinatore
 IdFieldEnum_valutazione.COMPONENTE_COMITATO_SCIENTIFICO__ATTO_NOMINA=Atto Nomina
 IdFieldEnum_valutazione.COMPONENTE_COMITATO_SCIENTIFICO__CODICEFISCALE=Codice Fiscale
 IdFieldEnum_valutazione.COMPONENTE_COMITATO_SCIENTIFICO__COGNOME=Cognome
@@ -354,7 +356,7 @@ error.selezionare_tipologia_inserimento_programma=Selezionare una tipologia di E
 error.selezionare_tipologia_sede=Selezionare almeno una tipologia di Sede
 error.solo_autocertificazione_selezionabile=\u00C8 possibile selezionare solo la modalità di verifica "autocertificazione" per gli eventi di tipologia "convegno/congresso"
 error.solo_pause_programma_res=Il programma non può essere composto di sole pause, verifiche di apprendimento e registrazione partecipanti, inserire almeno un'attività
-error.stato_elaborazione_cogeaps=Errore imprevisto urante la richiesta di stato elaborazione al Co.Ge.A.P.S.
+error.stato_elaborazione_cogeaps=Errore imprevisto durante la richiesta di stato elaborazione al Co.Ge.A.P.S.
 error.stessoCf=il delegato del legale rappresentante non può avere lo stesso codice fiscale del legale rappresentante
 error.troppi_partecipanti100=Il numero massimo di partecipanti per questa tipologia di evento è di 100 partecipanti
 error.troppi_partecipanti200=Il numero massimo di partecipanti per questa tipologia di evento è di 200 partecipanti
@@ -1477,3 +1479,7 @@ label.allegatoDecadenza=Documento di decadenza
 label.motivazione=Motivazione
 message.provider_bloccato_success=Provider bloccato con successo.
 label.allegato_decadenza=Allegato decadenza Provider
+error.numero_comitato_integrazione=Il risultato della valutazione dell'integrazione viola il vincolo del numero minimo dei componenti del comitato scientifico. Si prega di ricontrollare la valutazione.
+error.numero_coordinatore_integrazione=Il risultato della valutazione dell'integrazione viola il vincolo di avere un e un solo coordinatore del comitato scientifico. Si prega di ricontrollare la valutazione.
+error.numero_professionisti_sanitari_integrazione=Il risultato della valutazione dell'integrazione viola il vincolo del numero dei professionisti sanitari del comitato scientifico. Si prega di ricontrollare la valutazione.
+error.sede_legale_integrazione=Il risultato della valutazione dell'integrazione viola il vincolo di avere una e una sola sede legale. Si prega di ricontrollare la valutazione.
