ATTENZIONE WIP!!! Giro accreditamento con history field integrazione

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -781,7 +781,7 @@ label.indirizzo_sede={0} ({1})
 label.info_accesso_piattaforma=Accesso piattaforma FAD
 label.info_account=Accedi all'area riservata
 label.info_accreditamento=Info Accreditamento
-label.info_applicazione_integrazione=Le modifche saranno applicate solo dopo approvazione da parte della Segreteria ECM
+label.info_applicazione_integrazione=Le modifiche saranno applicate solo dopo approvazione da parte della Segreteria ECM
 label.info_blocco_legali=Accedendo alla sezione Dati dei Responsabili, i dati del Legale Rappresentante e del Delegato del Legale Rappresentante non saranno più modificabili in quanto utilizzati per il controllo della firma digitale apposta sui file allegati. Qualora il Provider abbia previsto la figura del Delegato del Legale Rappresentante il controllo sulla firma digitale dei file sarà effettuato sui dati del Delegato del Legale Rappresentante
 label.info_delega=Il richiedente è il legale rappresentante oppure è stato delegato dal Legale Rappresentante ad effettuare la presente richiesta?
 label.info_evento=Info Eventi
@@ -869,7 +869,7 @@ label.listaDomandeDaValutare=Lista delle Domande di Accreditamento da valutare
 label.listaDomandeDaValutareIntegrazione=Lista Domande di Accreditamento di cui valutare l'integrazione
 label.listaDomandeDaValutareProvvisorio=Lista delle Domande di Accreditamento Provvisorie da valutare
 label.listaDomandeDaValutareStandard=Lista delle Domande di Accreditamento Standard da valutare
-label.listaDomandeInScadenza=Lista delle Domande di Accreditamento in scadenza (nei prossimi 10 giorni)
+label.listaDomandeInScadenza=Lista delle Domande di Accreditamento in scadenza (nei prossimi 30 giorni)
 label.listaDomandeIntegrazione=Lista delle Domande di Accreditamento in richiesta di integrazione
 label.listaDomandeNonValutate=Lista delle ultime Domande di Accreditamento di cui non è stata fornita una valutazione
 label.listaDomandePreavvisoRigetto=Lista delle Domande di Accreditamento in preavviso di rigetto
